@@ -1,1 +1,1 @@
-1.8.17.0-rc3
+1.8.17.0
